fixed biography section mobile

--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -11,7 +11,7 @@
 
     &__tagline {
         z-index: 9999;    
-       
+        margin: auto;
         position: relative;
         width: 100%;
         
