--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -247,15 +247,16 @@
   .card__two {
     background-color:  #222930;;
     box-shadow: 2px 5px 8px #3b74ad;
-  
+    
     border: none;
-    height: 50rem;
+   
     width: 100vw;
     
    
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-content: space-evenly;
     color: white;
     overflow-y: auto;
     overflow-x: hidden;
@@ -354,12 +355,16 @@
 }
 
   .hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     
     &__image {
       border-radius: .5rem;
-      margin-top: 10rem;
+      margin-top: 1rem;
       height: 5rem;
-      width: 97vw; 
+      width: 95vw; 
+      margin-left: .5rem;
         
       
     }
